--- a/finance-tracker-backend/package.json
+++ b/finance-tracker-backend/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "node server.js", 
+    "db:build": "prisma generate && prisma migrate deploy",
     "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
